docs(sdds-crm): fix import

--- a/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-css-module.mdx
+++ b/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-css-module.mdx
@@ -4,9 +4,9 @@ import TipCssModules from '../_utils/_tip-css-modules.mdx';
 
 ```jsx
 import React from 'react';
-import { Button, BodyL } from '@salutejs/plasma-giga';
+import { Button, BodyL } from '@salutejs/sdds-crm';
 
-import styles from '@salutejs/plasma-themes/css/plasma_giga.module.css';
+import styles from '@salutejs/sdds-themes/css/sdds_serv.module.css';
 
 const App = () => {
     return (
