--- a/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-sass-module.mdx
+++ b/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-sass-module.mdx
@@ -4,7 +4,7 @@ import TipCssModules from '../_utils/_tip-css-modules.mdx';
 
 ```jsx
 import React from 'react';
-import { Button, BodyL } from '@salutejs/plasma-giga';
+import { Button, BodyL } from '@salutejs/sdds-crm';
 
 import styles from './index.module.sass';
 
@@ -23,5 +23,5 @@ export default App;
 В файле, где происходит подключение всех стилей, например `index.module.sass`
 
 ```sass
-@use '@salutejs/plasma-themes/css/plasma-giga.module.css'
+@use '@salutejs/sdds-themes/css/sdds_serv.module.css'
 ```
