--- a/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-sc.mdx
+++ b/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-sc.mdx
@@ -1,10 +1,10 @@
 ```jsx
 import React from 'react';
 import { createGlobalStyle } from 'styled-components';
-import { Button, BodyL } from '@salutejs/plasma-giga/styled-components';
-import { plasma_giga__light } from '@salutejs/plasma-themes';
+import { Button, BodyL } from '@salutejs/sdds-crm/styled-components';
+import { sdds_serv__light } from '@salutejs/sdds-themes';
 
-const Theme = createGlobalStyle(plasma_giga__light);
+const Theme = createGlobalStyle(sdds_serv__light);
 
 const App = () => {
     return (
