--- a/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-css.mdx
+++ b/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-css.mdx
@@ -4,7 +4,7 @@ import TipProcessingStyle from '../_utils/_tip-processing-styles.mdx';
 
 ```jsx
 import React from 'react';
-import { Button, BodyL } from '@salutejs/plasma-giga';
+import { Button, BodyL } from '@salutejs/sdds-crm';
 
 import 'index.css';
 
@@ -23,5 +23,5 @@ export default App;
 В файле, где происходит подключение всех стилей, например `index.css`
 
 ```css
-@import '@salutejs/plasma-themes/css/plasma_giga__dark.css';
+@import '@salutejs/sdds-themes/css/sdds_serv__dark.css';
 ```
