--- a/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-sass.mdx
+++ b/website/sdds-crm-docs/docs/_theme-turn-on/theme-turn-on-sass.mdx
@@ -4,7 +4,7 @@ import TipProcessingStyle from '../_utils/_tip-processing-styles.mdx';
 
 ```jsx
 import React from 'react';
-import { Button, BodyL } from '@salutejs/plasma-giga';
+import { Button, BodyL } from '@salutejs/sdds-crm';
 
 import './index.sass';
 
@@ -23,6 +23,6 @@ export default App;
 В файле, где происходит подключение всех стилей, например `index.sass`
 
 ```scss
-@use '@salutejs/plasma-themes/css/plasma-giga__dark.css';
+@use '@salutejs/sdds-themes/css/sdds_serv__dark.css';
 // остальные стили
 ```
