--- a/website/sdds-cs-docs/docs/components/TextField.mdx
+++ b/website/sdds-cs-docs/docs/components/TextField.mdx
@@ -61,7 +61,7 @@ export function App() {
             <TextField
                 placeholder="Размер"
                 size="s"
-                defaultValue="L56"
+                defaultValue="S32"
             />
         </div>
     );
