--- a/website/sdds-dfa-docs/docs/components/TextField.mdx
+++ b/website/sdds-dfa-docs/docs/components/TextField.mdx
@@ -60,6 +60,11 @@ export function App() {
         <div>
             <TextField
                 placeholder="Размер"
+                size="xl"
+                defaultValue="XL64"
+            />
+            <TextField
+                placeholder="Размер"
                 size="l"
                 defaultValue="L56"
             />
