--- a/packages/plasma-new-hope/src/components/TextField/TextField.template-doc.mdx
+++ b/packages/plasma-new-hope/src/components/TextField/TextField.template-doc.mdx
@@ -37,7 +37,7 @@ export function App() {
 ```
 
 ### Размер поля
-Размер поля задаётся с помощью свойства `size`. Свойство принимает значения `"l" | "m" | "s" | "xs"`:
+Размер поля задаётся с помощью свойства `size`:
 
 ```tsx live
 import React from 'react';
@@ -48,6 +48,11 @@ export function App() {
         <div>
             <TextField
                 placeholder="Размер"
+                size="xl"
+                defaultValue="XL64"
+            />
+            <TextField
+                placeholder="Размер"
                 size="l"
                 defaultValue="L56"
             />
@@ -55,6 +60,16 @@ export function App() {
                 placeholder="Размер"
                 size="s"
                 defaultValue="S40"
+            />
+            <TextField
+                placeholder="Размер"
+                size="s"
+                defaultValue="S32"
+            />
+            <TextField
+                placeholder="Размер"
+                size="xs"
+                defaultValue="XS24"
             />
         </div>
     );
