--- a/website/plasma-web-docs/docs/components/TextField.mdx
+++ b/website/plasma-web-docs/docs/components/TextField.mdx
@@ -61,6 +61,11 @@ export function App() {
         <div>
             <TextField
                 placeholder="Размер"
+                size="xl"
+                defaultValue="XL64"
+            />
+            <TextField
+                placeholder="Размер"
                 size="l"
                 defaultValue="L56"
             />
@@ -68,6 +73,16 @@ export function App() {
                 placeholder="Размер"
                 size="m"
                 defaultValue="M48"
+            />
+            <TextField
+                placeholder="Размер"
+                size="s"
+                defaultValue="S32"
+            />
+            <TextField
+                placeholder="Размер"
+                size="xs"
+                defaultValue="XS24"
             />
         </div>
     );
