feat(*): update paddings within filter dropdown in Table

--- a/website/sdds-crm-docs/docs/components/Combobox.mdx
+++ b/website/sdds-crm-docs/docs/components/Combobox.mdx
@@ -450,44 +450,82 @@ type Items = Array<{
         Вся логика выбора элементов и взаимодействия с компонентом лежит на стороне пользователя.
 
         ```tsx live
-        import React, { useState } from 'react';
-        import { Select } from '@salutejs/sdds-crm';
+        import React, { useState, useEffect } from 'react';
+        import { Combobox } from '@salutejs/sdds-crm';
 
         export function App() {
-            const [checked, setChecked] = useState(false);
-
-            const items = [
+            const flatItems = [
                 {
                     value: 'north_america',
                     label: 'Северная Америка',
                 },
                 {
-                    value: 'south_america',
-                    label: 'Южная Америка',
-                    items: [
-                        {
-                            value: 'brazil',
-                            label: 'Бразилия',
-                        },
-                        {
-                            value: 'argentina',
-                            label: 'Аргентина',
-                        },
-                    ],
+                    value: 'rio_de_janeiro',
+                    label: 'Рио-де-Жанейро',
+                },
+                {
+                    value: 'sao_paulo',
+                    label: 'Сан-Паулу',
+                },
+                {
+                    value: 'buenos_aires',
+                    label: 'Буэнос-Айрес',
+                },
+                {
+                    value: 'cordoba',
+                    label: 'Кордова',
+                },
+                {
+                    value: 'bogota',
+                    label: 'Богота',
+                },
+                {
+                    value: 'medellin',
+                    label: 'Медельин',
                 },
             ];
 
+            const [value, setValue] = useState([]);
+            const [checked, setChecked] = useState(false);
+            const [indeterminate, setIndeterminate] = useState(false);
+
+            const handleClick = () => {
+                if (checked && !indeterminate) {
+                    setValue([]);
+                } else {
+                    setValue(flatItems.map((item) => item.value));
+                }
+            };
+
+            useEffect(() => {
+                if (value.length === 0) {
+                    setChecked(false);
+                    setIndeterminate(false);
+                } else if (value.length === flatItems.length) {
+                    setChecked(true);
+                    setIndeterminate(false);
+                } else {
+                    setChecked(true);
+                    setIndeterminate(true);
+                }
+            }, [value]);
+
             return (
-                <div style={{ display: "flex", gap: "30px", height: "300px" }}>
+                <div style={{ display: "block", width: "300px", height: "300px" }}>
                     <Combobox
+                        value={value}
+                        onChange={setValue}
                         label="Label"
                         placeholder="Placeholder"
-                        items={items}
+                        items={flatItems}
                         multiple
                         selectAllOptions={{
                             checked,
-                            onClick: () => setChecked(prev => !prev)
+                            indeterminate,
+                            onClick: handleClick,
                         }}
+                        listOverflow="auto"
+                        listMaxHeight="200px"
                     />
                 </div>
             );
