--- a/website/sdds-cs-docs/docs/components/Carousel.mdx
+++ b/website/sdds-cs-docs/docs/components/Carousel.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 # Carousel
 
 <Description name="Carousel" />
-<PropsTable name="Carousel" />
+<PropsTable name="Carousel" exclude="scrollAlign" />
 
 ## Использование
 Для управления пагинацией используется свойство `paginationOptions`. Формат следующий:
