--- a/website/plasma-ui-docs/docs/components/Carousel.mdx
+++ b/website/plasma-ui-docs/docs/components/Carousel.mdx
@@ -17,7 +17,7 @@ import { PropsTable, Description, StorybookLink } from '@site/src/components';
 
 ### Carousel
 <Description name="Carousel" />
-<PropsTable name="Carousel" exclude="scrollAlign" />
+<PropsTable name="Carousel" />
 
 ### CarouselLite
 
