--- a/website/sdds-scan-docs/docs/components/Carousel.mdx
+++ b/website/sdds-scan-docs/docs/components/Carousel.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 # Carousel
 
 <Description name="Carousel" />
-<PropsTable name="Carousel" exclude="scrollAlign" />
+<PropsTable name="Carousel" />
 
 ## Использование
 Для управления пагинацией используется свойство `paginationOptions`. Формат следующий:
@@ -48,7 +48,6 @@ import TabItem from '@theme/TabItem';
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                position: relative;
                 border-radius: 8px;
                 width: 400px;
                 height: 370px;
