--- a/website/plasma-web-docs/docs/components/Autocomplete.mdx
+++ b/website/plasma-web-docs/docs/components/Autocomplete.mdx
@@ -38,7 +38,7 @@ type SuggestionItem = {
 };
 ```
 
-## Примеры
+## Примеры автокомплита
 
 <Tabs>
     <TabItem value="default" label="Default" default>
