--- a/website/plasma-b2c-docs/docs/components/Autocomplete.mdx
+++ b/website/plasma-b2c-docs/docs/components/Autocomplete.mdx
@@ -16,7 +16,7 @@ import TabItem from '@theme/TabItem';
 <PropsTable name="Autocomplete" />
 
 ## Использование
-Расширенная версия компонента `TextField`.
+Расширенная версия компонента `TextField`. Тестовое слово для поиска тайпсенс.
 
 Добавилась возможность использования выпадающего списка с подсказками.\
 По умолчанию подсказки фильтруются вне зависимости от регистра. Но это можно изменить, прокинув свой callback `filter`.\
