--- a/website/plasma-web-docs/docs/components/TextArea.mdx
+++ b/website/plasma-web-docs/docs/components/TextArea.mdx
@@ -33,7 +33,7 @@ export function App() {
 ```
 
 ### Размеры компонента
-Высоту и ширину можно регулировать с помощью свойств `height` и `width`, 
+Высоту и ширину можно регулировать с помощью свойств `height` и `width`,
 указав значения в `rem` или соответствующие свойствам css значения.
 `height` и `width` отвечают за **всю** высоту и ширину компонента.
 
@@ -77,7 +77,7 @@ export function App() {
 
 ### Autoresize
 Также можно включить автоматическое регулирование высоты поля ввода по длине контента внутри (параметра `value`).
-Для этого необходимо использовать свойство `autoResize`. 
+Для этого необходимо использовать свойство `autoResize`.
 
 Свойства `minAuto`, `maxAuto` указываются в абсолютных единицах и отвечают за минимальное и максимальное количество строк.
 
@@ -166,11 +166,11 @@ export function App() {
 ```tsx live
 import React from 'react';
 import { TextArea, TextS } from '@salutejs/plasma-web';
-import { surfaceTransparentTertiary } from '@salutejs/plasma-themes/tokens';
+import { surfaceSolid03 } from '@salutejs/plasma-tokens-web';
 
 export function App() {
     const HeaderSlot = () => (
-       <div style={{ margin: "0 0.75rem", padding: "0.5rem 0", borderBottom: `0.063rem solid ${surfaceTransparentTertiary}` }}>
+       <div style={{ margin: "0 0.75rem", padding: "0.5rem 0", borderBottom: `0.063rem solid ${surfaceSolid03}` }}>
            <TextS>Дополнительный контент</TextS>
        </div>
     )
